# definitionAPI

./: .gitignore  Dockerfile  README.md  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
definitionAPI/: asgi.py  settings.py  urls.py  wsgi.py
dictionary/: admin.py  models.py  scraper.py  serializers.py  tests.py  urls.py  views.py
dictionary/migrations/: 0001_initial.py  0002_rename_definition_id_antonym_definition_and_more.py
staticfiles/rest_framework/docs/js/: highlight.pack.js
staticfiles/rest_framework/js/: bootstrap.min.js
